--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 books.author = Doni
 
-quarkus.log.category."io.quarkus".level=DEBUG
+%dev.books.author = Doni
+%test.books.author = Donald Donchi
+quarkus.profile=staging
