testing native executable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 books.author = Doni
-
-%dev.books.author = Doni
+%prod.books.author = Doni Prod
+%dev.books.author = Doni Dev
 %test.books.author = Donald Donchi
-quarkus.profile=staging
+quarkus.banner.enabled=true
+#quarkus.profile=staging
